[refactor] refactor class name. and complete first test case for empty string

--- a/TSStringAverage/TSStringAverageTests/TSStringAverageTests.csproj
+++ b/TSStringAverage/TSStringAverageTests/TSStringAverageTests.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>0865c7d6-92de-408d-828b-b9c89ce5f4c3</ProjectGuid>
+    <ProjectGuid>{BD7EA916-3FC8-431A-A204-D6E4F3A885F0}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>TSStringAverageTests</RootNamespace>
@@ -50,8 +50,14 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="TSStringAverageTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\TSStringAverage.csproj">
+      <Project>{BC20C7A0-F944-4895-9821-622B4504967C}</Project>
+      <Name>TSStringAverage</Name>
+    </ProjectReference>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
